syntax = "proto3";

package rivet.backend.pkg.faker.user;

import "proto/common.proto";

message Request {

}

message Response {
	rivet.common.Uuid user_id = 1;
}
